    - Disabled Zinc, Nickel, and Cobalt plates
    - Move Nitinol smelting up a tier
    - Hide extra power entities
    - Added Ore sorting facility 5
    - Buffed recipes for Silicon arbide, Silicon nitride, Tungsten carbide plate, Copper-tungsten plate
    - SpaceX techs Habitation Modules and Life Support Systems require bio science
    - Doubled the slag produced by ore sorting recipes
  Bugfixes:
    - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
    - Fixed localised name of Mad Clown's Ore crystallization recipes
    - Hid unreachable recipes and items
    - Compatibility changes for latest Angel's mods
    - Screen was dimmed on game start until Tab key was pressed
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 14.05.2021
  Bugfixes:
    - Fixed multiplayer desync issue
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 06.03.2021
  Changes:
    - Buffed Lead 3
    - Added fuel value to tool tips for burnable fluids
    - Merged in A Sea Block Config mod
    - Added compatibility for MadClown01's Extended AngelBob Minerals
    - Reshuffled early game technology and recipe unlocks
    - Moved Clarifier from Water treatment to Washing 1
    - Removed Water treatment from startup techs
    - Reduced Hydrogen sulfide gas from Viscous mud water washing
    - Reduced lime and time required for Porus lime filters
    - Reduced time required for Sulfur air scrubbing
    - Reduced cost of mud landfill
    - Hid settings from other mods that have no effect with Sea Block
    - Removed bio sicence from Fish refugium 2
    - Set techs Desert farming 1, Swamp farming 1, and Temperate farming 1 to ignore tech cost modifier
    - Hid metal mixing furnaces if multi purpose furnaces are disabled