@@ -29,6 +29,7 @@ Date: ???
     - Buffed recipes for Silicon arbide, Silicon nitride, Tungsten carbide plate, Copper-tungsten plate
     - SpaceX techs Habitation Modules and Life Support Systems require bio science
     - Doubled the slag produced by ore sorting recipes
+    - Hid vanillla concrete and refined concrete
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
